--- a/index.html
+++ b/index.html
@@ -18,7 +18,15 @@
     <![endif]-->
   </head>
   <body>
-    <h1>Hello, world!</h1>
+
+<div class="navbar navbar-default navbar-fixed-top" role="navigation">
+  <div class="container">
+    <div class="navbar-header">
+
+
+    </div>
+  </div>
+</div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
