--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/custom.css" rel="stylesheet">
+    <script src="https://use.fontawesome.com/088fb55041.js"></script>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -16,17 +18,77 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+
   </head>
   <body>
 
+<!--Fixed navbar-->
 <div class="navbar navbar-default navbar-fixed-top" role="navigation">
   <div class="container">
     <div class="navbar-header">
-
-
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">nDorra</a>
     </div>
+    <div class="navbar-collapse collapse">
+      <ul class="nav navbar-nav navbar-right">
+        <li class="active"><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Projects<b class="caret"></b></a>
+          <ul class="dropdown-menu">
+            <li class="dropdown-header">Web</li>
+            <li><a href="#">Adam</a></li>
+            <li><a href="#">Lucy</a></li>
+            <li><a href="#">Ari</a></li>
+            <li class="dropdown-header">Mobile</li>
+            <li><a href="#">Tom</a></li>
+            <li><a href="#">Steve</a></li>
+            <li><a href="#">Pat</a></li>
+          </ul>
+        </li>
+        <li><a href="#">Contact</a></li>
+  </div>
+ </div>
+</div>
+
+<div class="head-cont">
+<div class="container">
+ <div class="jumbotron">
+  <h1>Hello, world!</h1>
+  <p class="lead">This is a simple hero unit, a simple jumbotron-style component for
+                  calling extra attention to featured content or information.</p>
+  <hr class="my-2">
+  <p>It uses utility classes for typography and
+     spacing to space content out within the larger container.</p>
+  <p class="lead">
+    <a class="btn btn-primary btn-lg" href="#" role="button">Explore</a>
+    <a class="btn btn-success btn-lg" href="#" role="button">Exchange</a>
+  </p>
+ </div>
+</div>
+</div>
+
+
+
+<!-- Fixed Footer-->
+<div class="navbar navbar-inverse navbar-fixed-bottom" role="navigation">
+  <div class="container">
+    <div class="navbar-text navbar-left">
+    <p>© 2017 nDorra.</p>
+    </div>
+    <div class="navbar-text pull-right">
+      <a href="#"><i class="fa fa-facebook-official fa-2x"></i></a>
+    	<a href="#"><i class="fa fa-twitter fa-2x"></i></a>
+      <a href="#"><i class="fa fa-instagram fa-2x"></i></a>
   </div>
 </div>
+
+
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
